--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnectionString": "Host=localhost;Port=5432;Database=back_proj1;Username=postgres;Password=12345",
+    "DbConnectionString": "Host=localhost;Port=Port;Database=DatabaseName;Username=Username;Password=Password",
   },
   
   "Logging": {
