fix code in override/created? new prod &&&&&& CREATE PUT ENDPOINT

--- a/Backend.csproj
+++ b/Backend.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Abp.ZeroCore.IdentityServer4" Version="8.4.0" />
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Castle.Core" Version="5.2.1" />
+    <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.14" />
