--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,11 @@
     "Audience": "your-audience"
 
   },
+  "MinioSettings": {
+  "Endpoint": "127.0.0.1:9000",
+  "AccessKey": "AccessKey",
+  "SecretKey": "SecretKey",
+  "BucketName": "BucketName"
+},
   "AllowedHosts": "*"
 }
