--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "DbConnectionString": "Host=localhost;Port=5432;Database=back_proj1;Username=postgres;Password=12345",
+    "DbConnectionString": "Host=localhost;Port=5432;Database=back_proj1;Username=postgres;Password=12345"
   },
-  
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
