update upload image

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,10 +16,10 @@
 
   },
   "MinioSettings": {
-  "Endpoint": "127.0.0.1:9000",
-  "AccessKey": "AccessKey",
-  "SecretKey": "SecretKey",
-  "BucketName": "BucketName"
-},
+    "Endpoint": "127.0.0.1:9000",
+    "AccessKey": "zicSWTZvzgWEm0LSJCO7",
+    "SecretKey": "bCOhqe3aQLI7vM6jZFgsmfVN7PwdZiSNhGs7tI6j",
+    "BucketName": "images"
+  },
   "AllowedHosts": "*"
 }
