--- a/appsettings.json
+++ b/appsettings.json
@@ -17,8 +17,8 @@
   },
   "MinioSettings": {
     "Endpoint": "127.0.0.1:9000",
-    "AccessKey": "zicSWTZvzgWEm0LSJCO7",
-    "SecretKey": "bCOhqe3aQLI7vM6jZFgsmfVN7PwdZiSNhGs7tI6j",
+    "AccessKey": "QBbftXnshcsDuBaDw5Mz",
+    "SecretKey": "QMv8sgq5EvtE2epIA90cumGqbdydHg8v4exswB6b",
     "BucketName": "images"
   },
   "AllowedHosts": "*"
